fix:layout issues for suggest + tree widgets mds

--- a/Frontend/src/styles/custom_materialize.scss
+++ b/Frontend/src/styles/custom_materialize.scss
@@ -328,7 +328,7 @@ label:active{
   border:none!important;
   padding-top: 0!important;
   padding-bottom: 0!important;
-  border-bottom: 1px solid #9e9e9e!important;
+  border-bottom: 1px solid $inputBorderColor!important;
 }
 
 /* material angular2 */
