--- a/Frontend/src/styles/mds.scss
+++ b/Frontend/src/styles/mds.scss
@@ -147,10 +147,18 @@ mds .mdsGroup{
   .suggestInput, .multivalueBadgesText {
     margin-bottom: 10px;
   }
-  .suggestOpen{
-    float:right;
-    padding: 0;
-    margin:0;
+  .auto-suggest-field{
+    display: flex;
+    >.auto-suggest-field{
+      width:100%;
+    }
+    input{
+      flex-grow: 1;
+    }
+    .btn-flat{
+      overflow: hidden;
+      padding:0 1rem;
+    }
   }
   .widget_range{
     height: 50px;
